grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - data.crsmithdev.com
    secretName: data-crsmithdev-tls
  rules:
  - host: data.crsmithdev.com
    http:
      paths:
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 80
